--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <!-- Start Screen -->
     <div class="start-screen" id="startScreen">
         <div class="start-title">SERAD.DEV</div>
-        <div class="start-subtitle">LOADING ESPORTS PORTFOLIO...</div>
+        <div class="start-subtitle">LOADING PORTFOLIO...</div>
         <button class="start-button" onclick="startGame()">
             <i class="fas fa-play"></i> START MISSION
         </button>
