--- a/skills.html
+++ b/skills.html
@@ -302,7 +302,7 @@
                         <span class="skill-percent">80%</span>
                     </div>
                     <div class="skill-item">
-                        <span class="skill-name">React.js</span>
+                        <span class="skill-name">Kotlin</span>
                         <div class="skill-bar">
                             <div class="skill-progress" style="width: 75%"></div>
                         </div>
@@ -353,7 +353,7 @@
                         <span class="skill-percent">80%</span>
                     </div>
                     <div class="skill-item">
-                        <span class="skill-name">MongoDB</span>
+                        <span class="skill-name">NoSQL</span>
                         <div class="skill-bar">
                             <div class="skill-progress" style="width: 70%"></div>
                         </div>
@@ -397,7 +397,7 @@
                         <span class="skill-percent">90%</span>
                     </div>
                     <div class="skill-item">
-                        <span class="skill-name">WordPress</span>
+                        <span class="skill-name">Blender</span>
                         <div class="skill-bar">
                             <div class="skill-progress" style="width: 75%"></div>
                         </div>
